// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Flow - simple_user - Introspection Endpoint 1`] = `
Object {
  "active": false,
}
`;

exports[`Password Flow - simple_user - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "client_id": "password-flow-client-id",
  "sub": "simple_user",
  "idp": "local",
  "scope": [
    "openid"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`Password Flow - simple_user - UserInfo Endpoint 1`] = `
Object {
  "sub": "simple_user",
}
`;

exports[`Password Flow - user_with_all_claim_types - Introspection Endpoint 1`] = `
Object {
  "active": false,
}
`;

exports[`Password Flow - user_with_all_claim_types - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "client_id": "password-flow-client-id",
  "sub": "user_with_all_claim_types",
  "idp": "local",
  "scope": [
    "openid"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`Password Flow - user_with_all_claim_types - UserInfo Endpoint 1`] = `
Object {
  "sub": "user_with_all_claim_types",
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - Introspection Endpoint 1`] = `
Object {
  "active": false,
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_api_resource_claims",
  "idp": "local",
  "scope": [
    "openid"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`Password Flow - user_with_custom_api_resource_claims - UserInfo Endpoint 1`] = `
Object {
  "sub": "user_with_custom_api_resource_claims",
}
`;

exports[`Password Flow - user_with_custom_identity_claims - Introspection Endpoint 1`] = `
Object {
  "active": false,
}
`;

exports[`Password Flow - user_with_custom_identity_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "client_id": "password-flow-client-id",
  "sub": "user_with_custom_identity_claims",
  "idp": "local",
  "scope": [
    "openid"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`Password Flow - user_with_custom_identity_claims - UserInfo Endpoint 1`] = `
Object {
  "sub": "user_with_custom_identity_claims",
}
`;

exports[`Password Flow - user_with_standard_claims - Introspection Endpoint 1`] = `
Object {
  "active": false,
}
`;

exports[`Password Flow - user_with_standard_claims - Token Endpoint 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "client_id": "password-flow-client-id",
  "sub": "user_with_standard_claims",
  "idp": "local",
  "scope": [
    "openid"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`Password Flow - user_with_standard_claims - UserInfo Endpoint 1`] = `
Object {
  "sub": "user_with_standard_claims",
}
`;
